# emr-python-packages

./: .gitignore  Dockerfile  Makefile  README.md  amazonlinux.mk  amazonlinux.yaml  bashrc  hive_example.py  pyproject.py310.toml  pyproject.py311.toml  pyproject.py37.toml  pyproject.py39.toml  pyproject.toml  vimrc
.bash_completion.d/: make
