[tool.poetry]
name = "emr-more-packages"
version = "2021.04.11"
description = "Install more packages to EMR"
authors = ["Dyno Fu <dyno.fu@gmail.com>"]

[tool.poetry.dependencies]
boto3 = "1.19.7"
pandas = "*"
python = "~3.7"

[tool.poetry.dev-dependencies]
sqlparse = "*"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.cache
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
