[tool.poetry]
name = "emr-more-packages"
version = "2022.09.16"
description = "Install more packages to EMR"
authors = ["Dyno Fu <dyno.fu@gmail.com>"]

[tool.poetry.dependencies]
absl-py = "*"
aiohttp = "*"
aioitertools = "*"
aiomultiprocess = "*"
attrs = "*"
boto3 = "*"
cattrs = "*"
findspark = "*"
glances = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
pyhive = {version="*", extras=["hive"]}
pyjwt = "*"
python = "~3.7"
python-dateutil = "*"
pyyaml = "*"
requests = "*"
s3fs = "*"
sasl = "*"
simple-salesforce = "*"
sh = "*"
sqlformat = "*"
tabulate = "*"
thrift = ">=0.13.0"
thrift_sasl = "*"
tqdm = "*"
trino = ">=0.315.0"
yq = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
sqlparse = "*"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.cache
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
