[tool.poetry]
name = "emr-more-packages"
version = "2024.04.27"
description = "Install more packages to EMR"
authors = ["Dyno Fu <dyno.fu@gmail.com>"]

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
absl-py = "*"
aiohttp = "*"
aioitertools = "*"
aiomultiprocess = "*"
attrs = "*"
boto3 = "==1.24.59"
botocore = "==1.27.59"
cattrs = "*"
fastavro = "*"
findspark = "*"
httpie = "*"
numpy = "*"
pandas = "==1.1.5"
psycopg2-binary = "*"
pyarrow = "*"
pyhive = {version="*", extras=["hive_pure_sasl"]}
pyjwt = "*"
python = "~3.7"
python-dateutil = "*"
pyyaml = "*"
requests = "*"
s3fs = "*"
sasl = "*"
simple-salesforce = "*"
sh = "*"
sqlformat = "*"
tabulate = "*"
thrift = ">=0.13.0"
thrift_sasl = "*"
tqdm = "*"
trino = ">=0.315.0"
yq = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
sqlparse = "*"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.cache
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
